--- a/overview.html
+++ b/overview.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Bluemax</title>
-  	<meta name="keywords" content="">
+  	<meta name="keywords" content="Kerala tour packages">
   	<meta name="description" content="">
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <!--Nvigation Start-->
@@ -154,7 +154,7 @@ drawMenus();
                     <li><a href="http://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
                     <li><a href="#" id='A3' onMouseOver='popup("A3","A3");' onMouseOut='popdown()' class="">Destinations</a></li>
                     <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
-                    <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="active">Tour&nbsp;Packages</a></li>
+                    <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="">Tour&nbsp;Packages</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=showAll&mid=6" class="">Accomodation</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=7" class="">Travel&nbsp;Desk</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8" class="">Contact&nbsp;Us </a></li>
@@ -170,7 +170,7 @@ drawMenus();
      <div id="Whatsnew_head">What’s New</div>
       <div id="Whatsnew_textarea">
         <ul>
-          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&cid=3" class="active">Alleppey Kumarakom Houseboat Honeymoon packages</a></li><li><a href="#" class="active">2 NIGHTS 3 DAYS ALLEPPEY  KUMMARKOM PACKAGE</a></li>        </ul>
+          <li>Overview</li>        </ul>
       </div>
       <div class="clear"></div>
     </div>
@@ -178,41 +178,24 @@ drawMenus();
 
     <!--CONTETN AREA START-->
     <div id="ContentArea">
-      <h1>2 NIGHTS 3 DAYS ALLEPPEY  KUMMARKOM PACKAGE</h1>
+      <h1>Overview</h1>
       <div id="MainContentarea">
 
         <!--LEFT CONTENT AREA START-->
         <div id="LeftContentarea">
 
-      <p>
-	  <div style="float:left;padding-right:10px;width:300px;height:auto"><img src="uploaded_files/tour/large_67.jpg" width="100%" /></div>
-	  <div style="float:right;width:350px">
-	  <b>Code</b> : BW 23<br />
-	  <b>Days</b> : 02 Nights/ 03 Days<br />
-	  <b>Category</b> : Alleppey Kumarakom Houseboat Honeymoon packages<br />
-	  <b>Destination</b> : Kumarakom<br />
-	  Kumarakom is a popular Tourism Destination located near the city of Kottayam (16 km), in Kerala, India, famous for its backwater tourism.	  </div>
-	  <div style="clear:both"></div><br />
-	  	  <h4>Covered Locations</h4>
-	  	<ul style="margin:0px;padding:0px;">
-	  				<li style="list-style:url(images/bullet.png);margin-left:20px;line-height:22px">Kumarakom</li>
-
-	  		</ul>
-
-	  <p>&nbsp;<span style="font-size: larger;"><span style="line-height: 100%;">Day 1 arrival</span></span></p>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">On the day of your arrival meet our representative to welcome and receive you at airport or railway station. Then proceed to Alleppey and check in your houseboat at 12 P.M. till 5.30 P.M. enjoy the ride. Between you will have one hour lunch break. After 5.30 P.M. boat will be anchored in lakeside. Over night stay.</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%"><span style="font-size: larger;">Day 2  houseboat</span></div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">Today continue your ride to kummarakom and enjoy the wast and beautiful backwaters of kerala.</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">At 05.30 the boat will be anchored. Overnight stay.</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%"><span style="font-size: larger;">Day 3 drop off</span></div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">Today morning you will get one hour ride. By 09:00 A.M. you have to check out your houseboat at kummarakom Then proceed to airport or railway station for droop off.</div>
-<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div> </p>
-      <div style="text-align:right"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=booking&mid=5&tour_id=67"><img src="images/enquiry.png" border="0"/></a></div>          <div class="clear"></div>
+      <p><p class="MsoNormal" align="center" style="text-align:center"><b><u><span style="font-size:18.0pt;line-height:115%">About Kerala<o:p></o:p></span></u></b></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">If India is an example of diversity, Kerala is a masterpiece .it&rsquo;s incredible how such a small strip of land can contain so many exotic ingredients .maybe&nbsp; it was Kerala&rsquo;s love to play host&nbsp; that brought the Phoenicians ,romans,chinese, arabs, and the British to its&nbsp; welcoming shores .maybe it was the allure of spices .maybe it was the magnetism of land&hellip;&hellip;&hellip;&hellip;&hellip;.<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Any way the immigrants left their foot prints in Kerala&rsquo;s,architectural scenario. We have Portugese forts, Dutch palaces, British bungalows. The list is endless,though Kerala has always been ever ready to imbibe anything new,it has maintained its customs&nbsp; and tradition to a surprising degree of perfection .The zealous preservation of visual and&nbsp; material arts makes this place a tourists delight.<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Here you can see a living example of religious rapport .Churches,masjids and temples stands shoulder to shoulder. For those interested in rituals,a visit to these places of worship will be an eye opener. You can find a Jain temple at Mattanchery, a temple of snakes at mannarsala. And yet another temple at ochirawhich has no idol at all &ndash; Talk about variety!<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">For the sea-friendly,the choice of beaches is staggering .opt for one of the well-developed cosy beach resorts were you can swim,surf or get initiated to the age old powers of yoga .tired bodies can get a massage with herbal oils curious minds can dwell on mysteries of AdvaitaVedantha &ndash;the unique philosophy of non-duality.if you prefer solitude,there are long stretches of untouched beaches were even the waves are introverts.<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">When the mountains call,you have to go Munnar,Peerumadu,Wynad and Ponmudi are invigorating haunts for poets,artists and people with beating hearts .if you want to see nature in all her finery, walk down&nbsp;&nbsp; the forest lane and look up at the Athirappilly waterfall. If your heart turns a somersault, you are only human.<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Wildlife enthusiasts rejoice Kerala&rsquo;s forest are still green .there are game sanctuaries which gave you opportunities to see <a name="_GoBack"></a>the huge Indian elephants&nbsp; with their tusks intact ,the spotted deer and the Sambar. In summer you can even catch a glimpse of the ferocious leopards and tigers.<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Kerala&rsquo;s backwaters are more of an emotion than a name .it has that unique quality of serenity,coupled with beauty. No wonder it is called the Venice of the east,these calm waterways burst, in to life when the boat race season begins. Then keralites through of their lethargy and tranbsform in to a fiery crowd.&nbsp; To see Kerala at its best, come with the festivals Onam is the profusion of flowers, music dance and general bonhomie.<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Kerala&rsquo;s cuisine is a mouthwatering story. Breakfast is an elaborate affair- Pootu,Dosa, idli, palappam, Idiappam are morning specials. For lunch there is rice and a choice of curries with pappads and fish fries. The vegetarian menu is really long. Sambar, pachadi, kichadi, erusseri, parippukaryand aviyal with side dishes and spicy pickles.Keralites really known how to end a meal. There is a wide array of payasams &ndash; sweet porridges cooked in milk (as well as coconut milk)- laced with ghee and topped with nuts. It defies description.<o:p></o:p></span></p>
+<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Apart from photographs, you can take home ivory carvings, eye- catching Kerala saris, block printed bedspreads or maybe an elephant carved in sandalwood. And when the day is done, lie back on the sand and relax to the lullaby of the wind and the waves. Tomorrow, the sights to see are many.<o:p></o:p></span></p>
+<p>&nbsp;</p> </p>
+                <div class="clear"></div>
         </div>
         <!--LEFT CONTENT AREA END-->
 
@@ -310,9 +293,9 @@ drawMenus();
                     	<h1>Tour Packages</h1>
                         <ul>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=6">Ayurveda Pack</a></li>
+                            <li><a href="http://bluemaxholidays.com/ayurveda-health-tourism-package.html">Ayurveda Pack</a></li>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=5">International Tours</a></li>
+                            <li><a href="http://bluemaxholidays.com/international-tour-package.html">International Tours</a></li>
                                                   	</ul>
 
 
@@ -322,11 +305,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Services</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=9">Confernce</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=booking&mid=6">Hotel Booking</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=10">Ticketing</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=11">Health Tourism</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=12">Kerala Taxi</a></li>
+                            <li><a href="http://bluemaxholidays.com/conference.html">Conference</a></li>
+                            <li><a href="http://bluemaxholidays.com/hotel-booking.html">Hotel Booking</a></li>
+                            <li><a href="http://bluemaxholidays.com/ticketing.html">Ticketing</a></li>
+                            <li><a href="http://bluemaxholidays.com/health-tourism.html">Health Tourism</a></li>
+                            <li><a href="http://bluemaxholidays.com/kerala-taxi.html">Kerala Taxi</a></li>
                       	</ul>
 
                     </div>
@@ -334,11 +317,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Know Kerala</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=13">Overview</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=14">A Brief History</a></li>
+                            <li><a href="http://bluemaxholidays.com/overview.html">Overview</a></li>
+                            <li><a href="http://bluemaxholidays.com/a-brief-history.html">A Brief History</a></li>
                             <li><a href="http://bluemaxholidays.com/art-and-culture.html">Art & Culture</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=15">Cuisine</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=16">People & Life Style</a></li>
+                            <li><a href="http://bluemaxholidays.com/cuisine.html">Cuisine</a></li>
+                            <li><a href="http://bluemaxholidays.com/people-and-life-style.html">People & Life Style</a></li>
                       	</ul>
 
                     </div>
@@ -366,7 +349,7 @@ drawMenus();
 
       <!--FOOTER AREA START-->
       <div id="Footer_area">
-                  <div id="Leftfooter">Copyright @ 2015 www.bluemaxholidays.com. All Rights Reserved </div>
+                  <div id="Leftfooter">Copyright @ 2016 www.bluemaxholidays.com. All Rights Reserved </div>
                   <div id="Rightfooter">Design & Developed by <a href="http://www.oxfotech.com/" target="_blank">www.oxfotech.com</a></div>
                 </div>
 
