--- a/people-and-life-style.html
+++ b/people-and-life-style.html
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>KASHMIR PACKAGE</title>
-  	<meta name="keywords" content="KASHMIR PACKAGE">
+	<title>Bluemax</title>
+  	<meta name="keywords" content="">
   	<meta name="description" content="">
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <!--Nvigation Start-->
@@ -154,7 +154,7 @@ drawMenus();
                     <li><a href="http://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
                     <li><a href="#" id='A3' onMouseOver='popup("A3","A3");' onMouseOut='popdown()' class="">Destinations</a></li>
                     <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
-                    <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="active">Tour&nbsp;Packages</a></li>
+                    <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="">Tour&nbsp;Packages</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=showAll&mid=6" class="">Accomodation</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=7" class="">Travel&nbsp;Desk</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8" class="">Contact&nbsp;Us </a></li>
@@ -170,7 +170,7 @@ drawMenus();
      <div id="Whatsnew_head">What’s New</div>
       <div id="Whatsnew_textarea">
         <ul>
-          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&cid=2" class="active">North Indian packages</a></li><li><a href="#" class="active">KASHMIR TOUR PACKAGE</a></li>        </ul>
+          <li></li>        </ul>
       </div>
       <div class="clear"></div>
     </div>
@@ -178,69 +178,14 @@ drawMenus();
 
     <!--CONTETN AREA START-->
     <div id="ContentArea">
-      <h1>KASHMIR TOUR PACKAGE</h1>
+      <h1></h1>
       <div id="MainContentarea">
 
         <!--LEFT CONTENT AREA START-->
         <div id="LeftContentarea">
 
-      <p>
-	  <div style="float:left;padding-right:10px;width:300px;height:auto"><img src="uploaded_files/tour/large_73.jpg" width="100%" /></div>
-	  <div style="float:right;width:350px">
-	  <b>Code</b> : NH 02<br />
-	  <b>Days</b> : 03 Nights/04 Days<br />
-	  <b>Category</b> : North Indian packages<br />
-	  <b>Destination</b> : Delhi<br />
-	  Delhi	  </div>
-	  <div style="clear:both"></div><br />
-	  	  <h4>Covered Locations</h4>
-	  	<ul style="margin:0px;padding:0px;">
-	  				<li style="list-style:url(images/bullet.png);margin-left:20px;line-height:22px">Delhi</li>
-
-	  		</ul>
-
-	  <div style="text-align: justify;"><b>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</b></div>
-<div style="text-align: justify;"><b>&nbsp;</b></div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;">&nbsp;</div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;"><b><span style="font-size:11.0pt;line-height:
-115%;Calibri&quot;,&quot;sans-serif&quot;;color:#00B050">Day 01-SRINAGAR</span></b></div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;">&nbsp;</div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size:11.0pt;line-height:115%;Calibri&quot;,&quot;sans-serif&quot;;
-color:windowtext">On arrival at Srinagar you will be met</span><span style="font-size:11.0pt;line-height:115%;Calibri&quot;,&quot;sans-serif&quot;"> by our representative and transfer you to Hotel. Afternoon free for independent activities. In the evening Shikara ride on Dal Lake to enjoy the sunset. </span></div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;">&nbsp;</div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size:11.0pt;line-height:115%;Calibri&quot;,&quot;sans-serif&quot;">Dinner overnight in Hotel.</span></div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;"><b>&nbsp;</b></div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;"><span style="color: rgb(0, 0, 0);"><b><span style="font-size: 11pt; line-height: 115%;">DAY 02: SRINAGAR &ndash; LOCAL SIGHTSEEING</span></b></span></div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;">&nbsp;</div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size:11.0pt;line-height:115%;Calibri&quot;,&quot;sans-serif&quot;">After breakfast Leave for Mughal Gardens visiting Nishat Bagh (Abode of pleasure) built by Asif Khan brother in law of Jehangir in 1632 AD. And Shalimar Bagh (Abode of love) built by Jehangir for his wife Empress Noor Jehan. All the gardens are situated on the bank of Dal Lake with the Zabarwan Mountains in the background. The distance from Srinagar to the said gardens is about 12 and 15 kms respectively. Enroute visit carpet-weaving factory and old Srinagar city. Half-Day Excursion to Gulmarg </span></div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;">&nbsp;</div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size:11.0pt;line-height:115%;Calibri&quot;,&quot;sans-serif&quot;">Dinner overnight in Hotel</span></div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify;"><b><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;color:#00B050">DAY 03: SRINAGAR &ndash; SONMARG - SRINAGAR</span></b></div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="text-align: justify; line-height: 14.4pt;"><span style="font-size: 11pt;">After breakfast full day excursion to Sonamarg (Golden Meadow) .The distance of about 83 kms will be covered about 2-&frac12; hrs. Sonamarg lies in Sindh Valley streamed with flowers and surrounded by mountains. Sonamarg is also the base for some interesting treks to the high altitude of Himalayan Lakes. Enjoy horse riding upto Thajwas glacier and sledge riding on snow. Late afternoon drive back to Srinagar</span></div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify; line-height: 115%;"><span style="font-size:11.0pt;line-height:115%;Calibri&quot;,&quot;sans-serif&quot;">Dinner overnight in Hotel.</span></div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="margin: 0in 0in 0.0001pt; text-align: justify;"><b><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;color:#00B050">DAY 04: DEPARTURE</span></b></div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;">After breakfast check out from the hotel and transfer to Srinagar airport.</span></div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;"><br />
-</span><b><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">Rates includes:-</span></b></div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="text-indent: -0.25in; text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">1.<span style="font-size: 7pt;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">Accommodation at Hotel Paradise Gateway/Zabarwan/Mumtaz Srinagar (03 Nights).</span></div>
-<div style="text-indent: -0.25in; text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">2.<span style="font-size: 7pt;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">03 Breakfast &amp; 03 Dinners </span></div>
-<div style="text-indent: -0.25in; text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">3.<span style="font-size: 7pt;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">Transportation by 01 Non AC Tavera/Scorpio for arrival/departure transfers, halfday Mughal Gardens with Sharankacharya Temple, full day Sonamarg.</span></div>
-<div style="text-indent: -0.25in; text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">4.<span style="font-size: 7pt;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">Shikara ride on Dal Lake.</span></div>
-<div style="text-indent: -0.25in; text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">5.<span style="font-size: 7pt;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">All taxes.</span></div>
-<div style="text-indent: -0.25in; text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">6.<span style="font-size: 7pt;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span></span><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;;">Assistance on arrival.</span></div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="text-align: justify;"><span style="font-size:11.0pt;Calibri&quot;,&quot;sans-serif&quot;">Rates does not include any air/train fare, meals not specified, laundry, tips, table drinks, camera/video fee, entrance fee of Mughal gardens,&nbsp; personal expenses of clients or any other expenses incurred beyond our control such as bad weather, landslides, road closure, train/flight cancellation &nbsp;political disturbances, etc.</span></div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="text-align: justify;">&nbsp;</div>
-<div style="text-align: justify;">&nbsp;</div> </p>
-      <div style="text-align:right"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=booking&mid=5&tour_id=73"><img src="images/enquiry.png" border="0"/></a></div>          <div class="clear"></div>
+      <p> </p>
+                <div class="clear"></div>
         </div>
         <!--LEFT CONTENT AREA END-->
 
@@ -338,9 +283,9 @@ color:windowtext">On arrival at Srinagar you will be met</span><span style="font
                     	<h1>Tour Packages</h1>
                         <ul>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=6">Ayurveda Pack</a></li>
+                            <li><a href="http://bluemaxholidays.com/ayurveda-health-tourism-package.html">Ayurveda Pack</a></li>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=5">International Tours</a></li>
+                            <li><a href="http://bluemaxholidays.com/international-tour-package.html">International Tours</a></li>
                                                   	</ul>
 
 
@@ -350,11 +295,11 @@ color:windowtext">On arrival at Srinagar you will be met</span><span style="font
                     <div class="tourpackages">
                     	<h1>Services</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=9">Confernce</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=booking&mid=6">Hotel Booking</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=10">Ticketing</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=11">Health Tourism</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=12">Kerala Taxi</a></li>
+                            <li><a href="http://bluemaxholidays.com/conference.html">Conference</a></li>
+                            <li><a href="http://bluemaxholidays.com/hotel-booking.html">Hotel Booking</a></li>
+                            <li><a href="http://bluemaxholidays.com/ticketing.html">Ticketing</a></li>
+                            <li><a href="http://bluemaxholidays.com/health-tourism.html">Health Tourism</a></li>
+                            <li><a href="http://bluemaxholidays.com/kerala-taxi.html">Kerala Taxi</a></li>
                       	</ul>
 
                     </div>
@@ -362,11 +307,11 @@ color:windowtext">On arrival at Srinagar you will be met</span><span style="font
                     <div class="tourpackages">
                     	<h1>Know Kerala</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=13">Overview</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=14">A Brief History</a></li>
+                            <li><a href="http://bluemaxholidays.com/overview.html">Overview</a></li>
+                            <li><a href="http://bluemaxholidays.com/a-brief-history.html">A Brief History</a></li>
                             <li><a href="http://bluemaxholidays.com/art-and-culture.html">Art & Culture</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=15">Cuisine</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=16">People & Life Style</a></li>
+                            <li><a href="http://bluemaxholidays.com/cuisine.html">Cuisine</a></li>
+                            <li><a href="http://bluemaxholidays.com/people-and-life-style.html">People & Life Style</a></li>
                       	</ul>
 
                     </div>
