--- a/ticketing.html
+++ b/ticketing.html
@@ -170,7 +170,7 @@ drawMenus();
      <div id="Whatsnew_head">What’s New</div>
       <div id="Whatsnew_textarea">
         <ul>
-          <li>Cuisine</li>        </ul>
+          <li>Ticketing</li>        </ul>
       </div>
       <div class="clear"></div>
     </div>
@@ -178,31 +178,13 @@ drawMenus();
 
     <!--CONTETN AREA START-->
     <div id="ContentArea">
-      <h1>Cuisine</h1>
+      <h1>Ticketing</h1>
       <div id="MainContentarea">
 
         <!--LEFT CONTENT AREA START-->
         <div id="LeftContentarea">
 
-      <p><h3 style="color: red; text-align: center;">&nbsp;<b><u><span style="font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:115%">KERALA CUISINE</span></u></b></h3>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Indian food is flavored&nbsp;&nbsp; with the non-scalding spices such as cinnamon ,cardamom, ginger ,cloves,,garlic,cumin,coriander, and turmeric,spices are used in India to tone up the system the way wines aid the digestion of western cuisine.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">As for the cuisine of Kerala, it is midlyflavoured gently cooked as has a certain genteel delicacy on the stomach .an example is the rich biriyanis of the northern parts of Kerala: the Malabar biriyanis<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Pulaos ,pilafs and biriyanis are meats ,spices&nbsp; and onions slowly steam cooked in boiled rice .malabarbiriyani was bought across the indian ocean&nbsp; by arabseaferers it should eaten hot with crispy crunchy papads.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">A favourite breakfast dish is puttu .rice flour dough is lagered with grated coconut and steamed in hollow bamboo cylinder .it is eaten spinked with sugar or mashed bananas or with a spicy curry made of channa or chicpeace .<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Iddlies&nbsp; or fluffy&nbsp; white streamed&nbsp; cakes and dosas&nbsp; which are thin golden pen cakes are popular in Kerala .they are made up of yeasty rice and lentil batter .they are not strictly malayali cuisine .they came across from the vegetarian kitchen next door in the state of tamilnadu.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Kerela does have its own&nbsp; well devoleped vegetarian cuisine&nbsp; if you visit the state during&nbsp; post-harvestonam season do opt for a typical vegetarian onam lunch with thoran or kalan or pachadi or olan.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Thoransarew gravy less dishes or finaly chopped boiled vegetables and possibly meat and sea food .the mustard seed used in thorans gives them a pleasantly assertive flavour.while the lightly fried grated coconut adds the crunch.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Avail on the other hand a mixed vegetable gravy dish thickened with coconut and yoghurt. Drumsticks, jackfruit seed and slices of mango are often used.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Olan is also a very gravy dish made of ash gourd and dry beans where the predominant flavor is that of coconut milk .it is a fairly thick liquid squeezed out from the white flesh of a fresh coconut.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Bananas are very popular in Kerala cuisine .sliced finely and deep fried as chips, they are chewy snacks.cut in to bits fried and dipped in jiggery or sugar srup they are sweets .cooked in thick youghurt and sea soned with chilly, turmeric cumin seed and curry leaves they become Kaleen an accompaniment to the main meal.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Malayaleepachadi is a fairly thick sauce made of sugar, yoghurt,gratedcoconut,mustard seed and a wide spectrum range of spices including green and red chillies.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">Sambar is a cross between a sauce and a broth .it containes mashed lentils,cooked vegetables and spices including the exotic and edible resin asafetida .for desert .there is the pradhaman or payasam,porridge like sweets with a vermicelli of rice base ,cooked in milk and sugar or jaggery.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">A favourite dish of Syrian Christians residing at Kottayam is Stew. Chicken and potatoes are simmered gently in a creamy white sauce flavored with black pepper, cinnamon, cloves, green chilies, lime juice, shallots and coconut milk.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">The stew is eatern with Appams .Appams &ndash;Kallappams or vellayappams are rice flour pancakes which have soft, thick, white spongy centers and thin goldern crisp lace- lake edge. Meenvevichathu or fish in a fiery red chili sauce is also another favorite item. Besides the chicken and fish there is also red meat, erachiolarthiathu. Beef (or lamb) is boiled with roasted coriander seeds, red chilies, cloves,onions, cumins, garlic, ginger,fried coconut chips and a little vinegar. Then with the water reduced, the meat is almost fried dry in a little oil that has been flavored with sliced shallots and highly aromatic curry leaves.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">No meal is completed without riceand it is puffed up in a narrow &ndash; naked urn. This is parboiled rice besides the stew and appams, meat,fish and rice, there are delicious little morsels- fried banana slices, crunchy yam crisps, prawns on coconut milk and chestnut like seeds of jackfruit flavored with chilies, garlic, cinnamon and fennel.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="font-size:12.0pt;line-height:115%">The meal ends with Panni-thick creamy yoghurt. It is the syrup of the south west, the honey made without any assistance from the bees by boiling down tapped toddy till it is a thick golden syrup.<o:p></o:p></span></p>
-<p class="MsoNormal" style="text-align:justify;text-justify:inter-ideograph"><span style="mso-bidi-font-size:12.0pt;line-height:115%">&nbsp;</span></p>
-<p class="MsoNormal"><b><u><span style="font-size:12.0pt;mso-bidi-font-size:11.0pt;line-height:115%">&nbsp;</span></u></b></p> </p>
+      <p> </p>
                 <div class="clear"></div>
         </div>
         <!--LEFT CONTENT AREA END-->
@@ -301,9 +283,9 @@ drawMenus();
                     	<h1>Tour Packages</h1>
                         <ul>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=6">Ayurveda Pack</a></li>
+                            <li><a href="http://bluemaxholidays.com/ayurveda-health-tourism-package.html">Ayurveda Pack</a></li>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=5">International Tours</a></li>
+                            <li><a href="http://bluemaxholidays.com/international-tour-package.html">International Tours</a></li>
                                                   	</ul>
 
 
@@ -313,11 +295,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Services</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=9">Confernce</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=booking&mid=6">Hotel Booking</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=10">Ticketing</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=11">Health Tourism</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=12">Kerala Taxi</a></li>
+                            <li><a href="http://bluemaxholidays.com/conference.html">Conference</a></li>
+                            <li><a href="http://bluemaxholidays.com/hotel-booking.html">Hotel Booking</a></li>
+                            <li><a href="http://bluemaxholidays.com/ticketing.html">Ticketing</a></li>
+                            <li><a href="http://bluemaxholidays.com/health-tourism.html">Health Tourism</a></li>
+                            <li><a href="http://bluemaxholidays.com/kerala-taxi.html">Kerala Taxi</a></li>
                       	</ul>
 
                     </div>
@@ -325,11 +307,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Know Kerala</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=13">Overview</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=14">A Brief History</a></li>
+                            <li><a href="http://bluemaxholidays.com/overview.html">Overview</a></li>
+                            <li><a href="http://bluemaxholidays.com/a-brief-history.html">A Brief History</a></li>
                             <li><a href="http://bluemaxholidays.com/art-and-culture.html">Art & Culture</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=15">Cuisine</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=16">People & Life Style</a></li>
+                            <li><a href="http://bluemaxholidays.com/cuisine.html">Cuisine</a></li>
+                            <li><a href="http://bluemaxholidays.com/people-and-life-style.html">People & Life Style</a></li>
                       	</ul>
 
                     </div>
