--- a/alleppey-students-tour.html
+++ b/alleppey-students-tour.html
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Bluemax</title>
-  	<meta name="keywords" content="">
+	<title>ALLEPPEY</title>
+  	<meta name="keywords" content="ALLEPPEY">
   	<meta name="description" content="">
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <!--Nvigation Start-->
@@ -170,7 +170,7 @@ drawMenus();
      <div id="Whatsnew_head">What’s New</div>
       <div id="Whatsnew_textarea">
         <ul>
-          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="#" class="active">International Tours</a></li>        </ul>
+          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&cid=4" class="active">Students tours</a></li><li><a href="#" class="active">ALLEPPEY STUDENTS TOUR</a></li>        </ul>
       </div>
       <div class="clear"></div>
     </div>
@@ -178,36 +178,60 @@ drawMenus();
 
     <!--CONTETN AREA START-->
     <div id="ContentArea">
-      <h1>Tour Packages</h1>
+      <h1>ALLEPPEY STUDENTS TOUR</h1>
       <div id="MainContentarea">
 
         <!--LEFT CONTENT AREA START-->
         <div id="LeftContentarea">
 
-    <br />
-      <!--SELECT CATOGERY AREA START-->
-	  <form name="search" action="" method="POST" style="padding:0px;margin:0px;">
-      <div class="catagory_area">
-        <div class="listmenu">
-          <select name="category_id" class="category">
-            <option value="">Select Category</option>
-            <option value="7" >Kerala honeymoon packages</option><option value="2" >North Indian packages</option><option value="3" >Alleppey Kumarakom Houseboat Honeymoon packages</option><option value="4" >Students tours</option><option value="6" >Ayurveda Pack</option><option value="5" >International Tours</option><option value="10" >Featured Tours</option>          </select>
-        </div>
-        <div class="listmenu">
-          <select name="duration_id" class="category">
-            <option value="">Select Duration</option>
-            <option value="12" >01 Nights / 02 Days</option><option value="14" >11 Nights / 12 Days</option><option value="15" >12 Nights / 13 Days</option><option value="16" >13 Nights / 14 Days</option><option value="13" >14 Nights / 15 Days</option><option value="11" >Day Trip</option><option value="2" >02 Nights/ 03 Days</option><option value="3" >03 Nights/04 Days</option><option value="4" >04 Nights/05 Days</option><option value="5" >05 Nights/06 Days</option><option value="6" >06 Nights/07 Days</option><option value="7" >07 Nights/08 Days</option><option value="8" >08 Nights/09 Days</option><option value="9" >09 Nights/10 Days</option><option value="10" >10 Nights/11 Days</option>          </select>
-        </div>
-        <div class="submitbtn_area">
-          <input name="" type="submit" class="submitbtn" value=""/>
-        </div>
-        <div class="clear"></div>
-      </div>
-	  </form>
-      <!--SELECT CATOGERY AREA END-->
+      <p>
+	  <div style="float:left;padding-right:10px;width:300px;height:auto"><img src="uploaded_files/tour/large_44.jpg" width="100%" /></div>
+	  <div style="float:right;width:350px">
+	  <b>Code</b> : BH101<br />
+	  <b>Days</b> : Day Trip<br />
+	  <b>Category</b> : Students tours<br />
+	  <b>Destination</b> : Alleppey<br />
+	  Alappuzha, also known as Alleppey, is a city in Alappuzha District of Kerala state of southern India. The name Alappuzha is derived from the geographical position and physical features of the place.	  </div>
+	  <div style="clear:both"></div><br />
+	  	  <h4>Covered Locations</h4>
+	  	<ul style="margin:0px;padding:0px;">
+	  				<li style="list-style:url(images/bullet.png);margin-left:20px;line-height:22px">Alleppey</li>
 
+	  		</ul>
 
-          <div class="clear"></div>
+	  <p style="text-align: center;">&nbsp;<b style="text-align: center; font-size: 12px;"><u><span style="font-size:14.0pt;line-height:115%;">1 DAY ALLEPPEY STUDY TOUR</span></u></b></p>
+<div><b><u><span style="font-size:12.0pt;line-height:
+115%;">Day 1 Alleppey</span></u></b></div>
+<div>&nbsp;</div>
+<div style="text-align:justify">Today morning start your journey from school or college to Alleppey, the Venice of east. In Alleppy you can enjoy motor boat or house boat ride through the Punnamada Lake. After lunch move to alleppy beach. Spend the evening there. In the evening drive back to your school or college.</div>
+<div style="text-align:justify">&nbsp;</div>
+<div style="text-align:justify"><i><span style="font-size:12.0pt;line-height:
+115%">THE TOUR ENDS WITH SWEET MEMMORIES&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;&hellip;............................</span></i></div>
+<div style="text-align:justify">&nbsp;</div>
+<div style="text-align:justify"><b><u><span style="font-size:12.0pt;line-height:
+115%;">Cost Includes</span></u></b><span style="font-size:12.0pt;
+line-height:115%;">:</span></div>
+<div style="text-align:justify">&nbsp;</div>
+<ul style="margin-top:0cm" type="disc">
+    <li style="color: rgb(38, 38, 38); margin-bottom: 0.0001pt;"><span style="font-size: small;">Experienced      tour manager accompanying the tour.</span></li>
+    <li style="color: rgb(38, 38, 38); margin-bottom: 0.0001pt;"><span style="font-size: small;">Transportation      in semi luxury Non A/c coach with flash light,lazar music ,smoke ,HD TV.</span></li>
+    <li style="color: rgb(38, 38, 38); margin-bottom: 0.0001pt;"><span style="font-size: small;">Entrance fee      to all monuments mentioned in the itinerary.</span></li>
+    <li style="margin-bottom: 0.0001pt;"><span style="font-size: small;"><span style="color: rgb(38, 38, 38);">Lunch and evening      snacks.</span></span></li>
+</ul>
+<div style="text-align:justify"><b><u><span style="font-size:12.0pt;line-height:
+115%;">Cost Excludes :&nbsp;</span></u></b></div>
+<div style="text-align:justify">&nbsp;</div>
+<ul style="margin-top:0cm" type="disc">
+    <li style="color: rgb(38, 38, 38); margin-bottom: 0.0001pt;"><span style="font-size: small;">Food &amp;      drinks during the journey other than mentioned in the cost included head </span></li>
+    <li style="color: rgb(38, 38, 38); margin-bottom: 0.0001pt;"><span style="font-size: small;">Personal      nature expenses like telephone / laundry bills/ Porter charges/ Pony,      Tips, Camera fee, cruising &amp; boating Charges Travel insurance or any      other expenses incurred due to bad weather, road closure, landslides etc.      and anything not specified in cost include. </span></li>
+    <li style="color: rgb(38, 38, 38); margin-bottom: 0.0001pt;"><span style="font-size: small;">Services not      specified above. </span></li>
+    <li style="color: rgb(38, 38, 38); margin-bottom: 0.0001pt;"><span style="font-size: small;">Please note      that any hike in - Taxes, fuel or guide charges levied by Government of      India &amp; Kerala, shall be charged extra.</span></li>
+</ul>
+<div style="text-align:justify"><span style="font-size: small;">&nbsp;</span></div>
+<div>&nbsp;</div>
+<div style="text-align:justify">&nbsp;</div>
+<div style="text-align:justify">&nbsp;</div> </p>
+      <div style="text-align:right"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=booking&mid=5&tour_id=44"><img src="images/enquiry.png" border="0"/></a></div>          <div class="clear"></div>
         </div>
         <!--LEFT CONTENT AREA END-->
 
@@ -305,9 +329,9 @@ drawMenus();
                     	<h1>Tour Packages</h1>
                         <ul>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=6">Ayurveda Pack</a></li>
+                            <li><a href="http://bluemaxholidays.com/ayurveda-health-tourism-package.html">Ayurveda Pack</a></li>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=5">International Tours</a></li>
+                            <li><a href="http://bluemaxholidays.com/international-tour-package.html">International Tours</a></li>
                                                   	</ul>
 
 
@@ -317,11 +341,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Services</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=9">Confernce</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=booking&mid=6">Hotel Booking</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=10">Ticketing</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=11">Health Tourism</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=12">Kerala Taxi</a></li>
+                            <li><a href="http://bluemaxholidays.com/conference.html">Conference</a></li>
+                            <li><a href="http://bluemaxholidays.com/hotel-booking.html">Hotel Booking</a></li>
+                            <li><a href="http://bluemaxholidays.com/ticketing.html">Ticketing</a></li>
+                            <li><a href="http://bluemaxholidays.com/health-tourism.html">Health Tourism</a></li>
+                            <li><a href="http://bluemaxholidays.com/kerala-taxi.html">Kerala Taxi</a></li>
                       	</ul>
 
                     </div>
@@ -329,11 +353,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Know Kerala</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=13">Overview</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=14">A Brief History</a></li>
+                            <li><a href="http://bluemaxholidays.com/overview.html">Overview</a></li>
+                            <li><a href="http://bluemaxholidays.com/a-brief-history.html">A Brief History</a></li>
                             <li><a href="http://bluemaxholidays.com/art-and-culture.html">Art & Culture</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=15">Cuisine</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=16">People & Life Style</a></li>
+                            <li><a href="http://bluemaxholidays.com/cuisine.html">Cuisine</a></li>
+                            <li><a href="http://bluemaxholidays.com/people-and-life-style.html">People & Life Style</a></li>
                       	</ul>
 
                     </div>
