--- a/andaman-holidays-package.html
+++ b/andaman-holidays-package.html
@@ -3,9 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Bluemax</title>
-  	<meta name="keywords" content="">
-  	<meta name="description" content="">
+	<title>ANDAMAN HOLIDAY PACKAGES</title>
+  	<meta name="keywords" content="ANDAMAN HOLIDAY PACKAGES">
+  	<meta name="description" content="ANDAMAN HOLIDAY PACKAGES">
 <link rel="stylesheet" href="css/style.css" type="text/css" />
 <!--Nvigation Start-->
 <script type="text/javascript" src="assets/scripts/jquery-1.8.0.min.js"></script>
@@ -154,7 +154,7 @@ drawMenus();
                     <li><a href="http://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
                     <li><a href="#" id='A3' onMouseOver='popup("A3","A3");' onMouseOut='popdown()' class="">Destinations</a></li>
                     <li><a href="http://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
-                    <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="">Tour&nbsp;Packages</a></li>
+                    <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="active">Tour&nbsp;Packages</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=showAll&mid=6" class="">Accomodation</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=7" class="">Travel&nbsp;Desk</a></li>
                     <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8" class="">Contact&nbsp;Us </a></li>
@@ -170,7 +170,7 @@ drawMenus();
      <div id="Whatsnew_head">What’s New</div>
       <div id="Whatsnew_textarea">
         <ul>
-          <li>Ticketing</li>        </ul>
+          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&cid=4" class="active">Students tours</a></li><li><a href="#" class="active">ANDAMAN HOLIDAY PACKAGES</a></li>        </ul>
       </div>
       <div class="clear"></div>
     </div>
@@ -178,14 +178,80 @@ drawMenus();
 
     <!--CONTETN AREA START-->
     <div id="ContentArea">
-      <h1>Ticketing</h1>
+      <h1>ANDAMAN HOLIDAY PACKAGES</h1>
       <div id="MainContentarea">
 
         <!--LEFT CONTENT AREA START-->
         <div id="LeftContentarea">
 
-      <p> </p>
-                <div class="clear"></div>
+      <p>
+	  <div style="float:left;padding-right:10px;width:300px;height:auto"><img src="uploaded_files/tour/large_72.jpg" width="100%" /></div>
+	  <div style="float:right;width:350px">
+	  <b>Code</b> : AH 02<br />
+	  <b>Days</b> : 06 Nights/07 Days<br />
+	  <b>Category</b> : Students tours<br />
+	  <b>Destination</b> : Andaman Islands<br />
+	  Andaman Islands is a upcoming tourist destination close to nature but with a underdeveloped and basic infrastructure with the basic facilities available.	  </div>
+	  <div style="clear:both"></div><br />
+	  	  <h4>Covered Locations</h4>
+	  	<ul style="margin:0px;padding:0px;">
+	  				<li style="list-style:url(images/bullet.png);margin-left:20px;line-height:22px">Andaman Islands</li>
+
+	  		</ul>
+
+	  <div align="center" style="margin-bottom: 0.0001pt; text-align: center;"><span style="font-size: large;"><b><u><span style="color: rgb(13, 13, 13);">6 Nights &amp; 7 Days (5N Port Blair + 1N Havelock + Day trip to Baratang)</span></u></b></span></div>
+<div align="center" style="margin-bottom: 0.0001pt; text-align: center;">&nbsp;</div>
+<div style="margin-bottom: 0.0001pt;"><span style="font-size: larger;"><u><strong><span style="color: rgb(13, 13, 13);">Day 01</span></strong></u></span><span style="font-size:10.0pt;Arial&quot;,&quot;sans-serif&quot;;Times New Roman&quot;;color:#0D0D0D"> - Arrival at Port Blair and transfer to respective hotel. Start with visit to&nbsp;<span style="background:yellow">Corbyn&rsquo;s Cove Beach</span>&nbsp;- 7 kms from Port Blair - a coconut palm fringed beach, ideal for swimming, sun-basking &amp; bathing. Later visit&nbsp;<span style="background:yellow">Cellular Jail</span>&nbsp;followed by the enthralling&nbsp;<span style="background:yellow">Sound and Light Show</span>&nbsp;at Cellular Jail - where the heroic saga of the Indian freedom struggle is brought alive. Overnight stay at respective Hotel / Resort at Port Blair<br />
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<br />
+<span style="font-size: larger;"><u><strong>Day 02</strong></u></span> - After breakfast, start off for a full- day excursion to&nbsp;<span style="background:yellow">Coral Island (North Bay)</span>&nbsp;to see coral reefs, exotic varieties of beautiful ornamental fish and other marine life. This is an ideal place for snorkeling as this sandy beach coupled with clear water creates a breathtaking spectacle. Please carry your lunch pack, drinking water &amp; changing dress. After North Bay, Visit&nbsp;<span style="background:
+yellow">Ross Island</span>, the former residential and administrative island of the British during their rule of South East Asia, was nick named the Paris of the East. This island was completely destroyed in an earthquake, now in ruins. Now proceed for&nbsp;<span style="background:yellow">Harbour Cruise (Viper Island),</span>&nbsp;covering seven ports by boats, and u can see one of the big floating dry dock, the island naval harbour and mainland going vessel harbour. Overnight stay at respective Hotel / Resort at Port Blair.<br />
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<br />
+<span style="font-size: larger;"><u><strong>Day 03</strong></u></span> - Early morning departure by &nbsp;ferry to&nbsp;<span style="background:
+yellow">Havelock Island</span>&nbsp;(54 kms by sea from Port Blair). It takes approx 4 hrs to reach the island. Enjoy your afternoon at Beach number 7 on the western coast, better known&nbsp;<span style="background:yellow">as &quot;The Radha Nagar Beach&rsquo;&rsquo;</span>. It is one of the most popular beaches on Havelock and was named &quot;Best Beach in Asia&quot; by&nbsp;</span><span style="font-size:12.0pt;Times New Roman&quot;,&quot;serif&quot;;Times New Roman&quot;;color:#222222"><a href="https://go.madmimi.com/redirects/1341430912-5386f46bb9ab11822f95b2e1f1f70d32-e8f1cb6?pa=10300388463" target="_blank"><span style="font-size:10.0pt;Arial&quot;,&quot;sans-serif&quot;;color:#0D0D0D">Time</span></a></span><span style="font-size:10.0pt;Arial&quot;,&quot;sans-serif&quot;;Times New Roman&quot;;color:#0D0D0D">&nbsp;in 2004. Overnight stay at respective Hotel / Resort at Havelock Island.<br />
+<br />
+<strong><u><span style="font-size: larger;">Day 04</span></u></strong> - After check out at</span><span style="font-size:10.0pt;Arial&quot;,&quot;sans-serif&quot;;Times New Roman&quot;;
+color:#0D0D0D">&nbsp;9am</span><span style="font-size:10.0pt;Arial&quot;,&quot;sans-serif&quot;;Times New Roman&quot;;color:#0D0D0D">, visit to the nearly&nbsp;Kala&nbsp;Pathar Beach&nbsp;(the beach gets its name from the surrounding village, which is Kala Pathar Village and the black rocks).&nbsp;Sail for Port Blair in the evening. Upon return from Havelock Island, transfer to Hotel. Overnight stay at respective Hotel / Resort at Port Blair.<br />
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<br />
+<span style="font-size: larger;"><u><strong>Day 05</strong></u></span> - Early morning departure to&nbsp;<span style="background:yellow">Baratang</span>. Its approx 110 kms from Port Blair. It holds the natures best treasures gifted to the Islands. Limestone caves, Active Mud Volcano. The Road journey from Port Blair to Baratang is through a dense jungle. Overnight stay at respective Hotel / Resort at Port Blair.<br />
+&nbsp;&nbsp;&nbsp; &nbsp;<br />
+<span style="font-size: larger;"><u><strong>Day 06</strong></u></span> - After breakfast, start off for a full-day &quot;<span style="background:yellow">City Tour&quot;</span>&nbsp;of Port Blair - covering Chatham Saw Mill (one of the oldest &amp; largest in Asia- Now closed), Forest Museum, Fisheries (Marine) Museum, Anthropological Museum, Samundrika Museum &amp; Water Sports Complex. Afternoon is free for shopping and other own activities. Overnight stay at respective Hotel / Resort at Port Blair.<br />
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<br />
+</span></div>
+<p><span style="font-size: larger;"><u><strong><span style="color: rgb(13, 13, 13);">Day 07</span></strong></u></span><span style="color: rgb(13, 13, 13); font-size: 10pt;"> - Return home with memories of the ultimate holidays</span>&nbsp;</p>
+<p>&nbsp;</p>
+<p><span style="font-size: larger;"><span style="color: rgb(34, 34, 34); font-family: Cambria, serif;">Above Rates are inclusive of the following:</span></span></p>
+<p class="MsoNormal" style="background-position: initial initial; background-repeat: initial initial;"><span style="font-size: medium;"><span style="font-family: Cambria, serif; color: rgb(34, 34, 34);">1.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Accommodation at Port Blair in A/C Room in Respective Hotel.</span></span><span style="font-size:7.5pt;
+font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;mso-fareast-font-family:&quot;Times New Roman&quot;;
+color:#222222"><o:p></o:p></span></p>
+<p class="MsoNormal" style="background-position: initial initial; background-repeat: initial initial;"><span style="font-size: medium;"><span style="font-family: Cambria, serif; color: rgb(34, 34, 34);">2.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Accommodation at Havelock in A/C Room in Respective Resort.</span></span><span style="font-size:7.5pt;
+font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;mso-fareast-font-family:&quot;Times New Roman&quot;;
+color:#222222"><o:p></o:p></span></p>
+<p class="MsoNormal" style="background-position: initial initial; background-repeat: initial initial;"><span style="font-size: medium;"><span style="font-family: Cambria, serif; color: rgb(34, 34, 34);">3.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Daily Breakfast at Respective Hotels (CP)</span></span><span style="font-size:7.5pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;
+mso-fareast-font-family:&quot;Times New Roman&quot;;color:#222222"><o:p></o:p></span></p>
+<p class="MsoNormal" style="background-position: initial initial; background-repeat: initial initial;"><span style="font-size: medium;"><span style="font-family: Cambria, serif; color: rgb(34, 34, 34);">4.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Airport Transfers.</span></span><span style="font-size:7.5pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;mso-fareast-font-family:
+&quot;Times New Roman&quot;;color:#222222"><o:p></o:p></span></p>
+<p class="MsoNormal" style="background-position: initial initial; background-repeat: initial initial;"><span style="font-size: medium;"><span style="font-family: Cambria, serif; color: rgb(34, 34, 34);">5.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sightseeing as per tour itinerary in private non A/C vehicle exclusively for the clients.</span></span><span style="font-size:7.5pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;mso-fareast-font-family:
+&quot;Times New Roman&quot;;color:#222222"><o:p></o:p></span></p>
+<p class="MsoNormal" style="background-position: initial initial; background-repeat: initial initial;"><span style="font-size: medium;"><span style="font-family: Cambria, serif; color: rgb(34, 34, 34);">6.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Entry tickets &amp; boat tickets at all sightseeing points mentioned in the itinerary.</span></span><span style="font-size:7.5pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;mso-fareast-font-family:
+&quot;Times New Roman&quot;;color:#222222"><o:p></o:p></span></p>
+<p class="MsoNormal" style="background-position: initial initial; background-repeat: initial initial;"><span style="font-size: medium;"><span style="font-family: Cambria, serif; color: rgb(34, 34, 34);">7.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Government boat from Port Blair to Havelock &amp; back.</span></span><span style="font-size:7.5pt;font-family:
+&quot;Arial&quot;,&quot;sans-serif&quot;;mso-fareast-font-family:&quot;Times New Roman&quot;;color:#222222"><o:p></o:p></span></p>
+<p class="MsoNormal" style="background-position: initial initial; background-repeat: initial initial;"><span style="font-size: medium;"><span style="font-family: Cambria, serif; color: rgb(34, 34, 34);">8.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Baratang trip on sharing basis.</span></span><span style="font-size:7.5pt;font-family:&quot;Arial&quot;,&quot;sans-serif&quot;;
+mso-fareast-font-family:&quot;Times New Roman&quot;;color:#222222"><o:p></o:p></span></p>
+<p><span style="font-size: larger;"><span style="line-height: 115%; font-family: Cambria, serif; color: rgb(34, 34, 34);">Above Rates are not inclusive of the following:</span></span><span style="font-size:7.5pt;line-height:115%;font-family:&quot;Cambria&quot;,&quot;serif&quot;;
+mso-fareast-font-family:&quot;Times New Roman&quot;;mso-bidi-font-family:Arial;
+color:#222222;mso-ansi-language:EN-US;mso-fareast-language:EN-US;mso-bidi-language:
+AR-SA"><br />
+</span><span style="font-size: medium;"><span style="line-height: 115%; font-family: Cambria, serif; color: rgb(34, 34, 34);">1. Airfare / Ship fare from Chennai<br />
+2. Lunch &amp; Dinner<br />
+3. Payments for service provided on a personal basis<br />
+4. Personal expense such as laundry, Camera Charges or any other services<br />
+5. Cost incurred due to mishaps, strikes, political unrest etc.<br />
+<br />
+<!--[if !supportLineBreakNewLine]--><br />
+<!--[endif]--></span></span></p>
+<p>&nbsp;</p> </p>
+      <div style="text-align:right"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=booking&mid=5&tour_id=72"><img src="images/enquiry.png" border="0"/></a></div>          <div class="clear"></div>
         </div>
         <!--LEFT CONTENT AREA END-->
 
@@ -283,9 +349,9 @@ drawMenus();
                     	<h1>Tour Packages</h1>
                         <ul>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=6">Ayurveda Pack</a></li>
+                            <li><a href="http://bluemaxholidays.com/ayurveda-health-tourism-package.html">Ayurveda Pack</a></li>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=5">International Tours</a></li>
+                            <li><a href="http://bluemaxholidays.com/international-tour-package.html">International Tours</a></li>
                                                   	</ul>
 
 
@@ -295,11 +361,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Services</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=9">Confernce</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=booking&mid=6">Hotel Booking</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=10">Ticketing</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=11">Health Tourism</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=12">Kerala Taxi</a></li>
+                            <li><a href="http://bluemaxholidays.com/conference.html">Conference</a></li>
+                            <li><a href="http://bluemaxholidays.com/hotel-booking.html">Hotel Booking</a></li>
+                            <li><a href="http://bluemaxholidays.com/ticketing.html">Ticketing</a></li>
+                            <li><a href="http://bluemaxholidays.com/health-tourism.html">Health Tourism</a></li>
+                            <li><a href="http://bluemaxholidays.com/kerala-taxi.html">Kerala Taxi</a></li>
                       	</ul>
 
                     </div>
@@ -307,11 +373,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Know Kerala</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=13">Overview</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=14">A Brief History</a></li>
+                            <li><a href="http://bluemaxholidays.com/overview.html">Overview</a></li>
+                            <li><a href="http://bluemaxholidays.com/a-brief-history.html">A Brief History</a></li>
                             <li><a href="http://bluemaxholidays.com/art-and-culture.html">Art & Culture</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=15">Cuisine</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=16">People & Life Style</a></li>
+                            <li><a href="http://bluemaxholidays.com/cuisine.html">Cuisine</a></li>
+                            <li><a href="http://bluemaxholidays.com/people-and-life-style.html">People & Life Style</a></li>
                       	</ul>
 
                     </div>
