--- a/two-nights-three-days-in-alleppey.html
+++ b/two-nights-three-days-in-alleppey.html
@@ -170,7 +170,7 @@ drawMenus();
      <div id="Whatsnew_head">What’s New</div>
       <div id="Whatsnew_textarea">
         <ul>
-          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="#" class="active">Ayurveda Pack</a></li>        </ul>
+          <li style="background:none;"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=list&mid=5">Tour Packages</a></li><li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&cid=3" class="active">Alleppey Kumarakom Houseboat Honeymoon packages</a></li><li><a href="#" class="active">2 NIGHTS 3 DAYS ALLEPPEY  KUMMARKOM PACKAGE</a></li>        </ul>
       </div>
       <div class="clear"></div>
     </div>
@@ -178,36 +178,41 @@ drawMenus();
 
     <!--CONTETN AREA START-->
     <div id="ContentArea">
-      <h1>Tour Packages</h1>
+      <h1>2 NIGHTS 3 DAYS ALLEPPEY  KUMMARKOM PACKAGE</h1>
       <div id="MainContentarea">
 
         <!--LEFT CONTENT AREA START-->
         <div id="LeftContentarea">
 
-    <br />
-      <!--SELECT CATOGERY AREA START-->
-	  <form name="search" action="" method="POST" style="padding:0px;margin:0px;">
-      <div class="catagory_area">
-        <div class="listmenu">
-          <select name="category_id" class="category">
-            <option value="">Select Category</option>
-            <option value="7" >Kerala honeymoon packages</option><option value="2" >North Indian packages</option><option value="3" >Alleppey Kumarakom Houseboat Honeymoon packages</option><option value="4" >Students tours</option><option value="6" >Ayurveda Pack</option><option value="5" >International Tours</option><option value="10" >Featured Tours</option>          </select>
-        </div>
-        <div class="listmenu">
-          <select name="duration_id" class="category">
-            <option value="">Select Duration</option>
-            <option value="12" >01 Nights / 02 Days</option><option value="14" >11 Nights / 12 Days</option><option value="15" >12 Nights / 13 Days</option><option value="16" >13 Nights / 14 Days</option><option value="13" >14 Nights / 15 Days</option><option value="11" >Day Trip</option><option value="2" >02 Nights/ 03 Days</option><option value="3" >03 Nights/04 Days</option><option value="4" >04 Nights/05 Days</option><option value="5" >05 Nights/06 Days</option><option value="6" >06 Nights/07 Days</option><option value="7" >07 Nights/08 Days</option><option value="8" >08 Nights/09 Days</option><option value="9" >09 Nights/10 Days</option><option value="10" >10 Nights/11 Days</option>          </select>
-        </div>
-        <div class="submitbtn_area">
-          <input name="" type="submit" class="submitbtn" value=""/>
-        </div>
-        <div class="clear"></div>
-      </div>
-	  </form>
-      <!--SELECT CATOGERY AREA END-->
+      <p>
+	  <div style="float:left;padding-right:10px;width:300px;height:auto"><img src="uploaded_files/tour/large_67.jpg" width="100%" /></div>
+	  <div style="float:right;width:350px">
+	  <b>Code</b> : BW 23<br />
+	  <b>Days</b> : 02 Nights/ 03 Days<br />
+	  <b>Category</b> : Alleppey Kumarakom Houseboat Honeymoon packages<br />
+	  <b>Destination</b> : Kumarakom<br />
+	  Kumarakom is a popular Tourism Destination located near the city of Kottayam (16 km), in Kerala, India, famous for its backwater tourism.	  </div>
+	  <div style="clear:both"></div><br />
+	  	  <h4>Covered Locations</h4>
+	  	<ul style="margin:0px;padding:0px;">
+	  				<li style="list-style:url(images/bullet.png);margin-left:20px;line-height:22px">Kumarakom</li>
 
+	  		</ul>
 
-          <div class="clear"></div>
+	  <p>&nbsp;<span style="font-size: larger;"><span style="line-height: 100%;">Day 1 arrival</span></span></p>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">On the day of your arrival meet our representative to welcome and receive you at airport or railway station. Then proceed to Alleppey and check in your houseboat at 12 P.M. till 5.30 P.M. enjoy the ride. Between you will have one hour lunch break. After 5.30 P.M. boat will be anchored in lakeside. Over night stay.</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%"><span style="font-size: larger;">Day 2  houseboat</span></div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">Today continue your ride to kummarakom and enjoy the wast and beautiful backwaters of kerala.</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">At 05.30 the boat will be anchored. Overnight stay.</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%"><span style="font-size: larger;">Day 3 drop off</span></div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">Today morning you will get one hour ride. By 09:00 A.M. you have to check out your houseboat at kummarakom Then proceed to airport or railway station for droop off.</div>
+<div align="justify" style="margin-bottom: 0cm; line-height: 100%">&nbsp;</div> </p>
+      <div style="text-align:right"><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=booking&mid=5&tour_id=67"><img src="images/enquiry.png" border="0"/></a></div>          <div class="clear"></div>
         </div>
         <!--LEFT CONTENT AREA END-->
 
@@ -305,9 +310,9 @@ drawMenus();
                     	<h1>Tour Packages</h1>
                         <ul>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=6">Ayurveda Pack</a></li>
+                            <li><a href="http://bluemaxholidays.com/ayurveda-health-tourism-package.html">Ayurveda Pack</a></li>
 
-                            <li><a href="http://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5&category_id=5">International Tours</a></li>
+                            <li><a href="http://bluemaxholidays.com/international-tour-package.html">International Tours</a></li>
                                                   	</ul>
 
 
@@ -317,11 +322,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Services</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=9">Confernce</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=booking&mid=6">Hotel Booking</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=10">Ticketing</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=11">Health Tourism</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=12">Kerala Taxi</a></li>
+                            <li><a href="http://bluemaxholidays.com/conference.html">Conference</a></li>
+                            <li><a href="http://bluemaxholidays.com/hotel-booking.html">Hotel Booking</a></li>
+                            <li><a href="http://bluemaxholidays.com/ticketing.html">Ticketing</a></li>
+                            <li><a href="http://bluemaxholidays.com/health-tourism.html">Health Tourism</a></li>
+                            <li><a href="http://bluemaxholidays.com/kerala-taxi.html">Kerala Taxi</a></li>
                       	</ul>
 
                     </div>
@@ -329,11 +334,11 @@ drawMenus();
                     <div class="tourpackages">
                     	<h1>Know Kerala</h1>
                         <ul>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=13">Overview</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=14">A Brief History</a></li>
+                            <li><a href="http://bluemaxholidays.com/overview.html">Overview</a></li>
+                            <li><a href="http://bluemaxholidays.com/a-brief-history.html">A Brief History</a></li>
                             <li><a href="http://bluemaxholidays.com/art-and-culture.html">Art & Culture</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=15">Cuisine</a></li>
-                            <li><a href="http://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=16">People & Life Style</a></li>
+                            <li><a href="http://bluemaxholidays.com/cuisine.html">Cuisine</a></li>
+                            <li><a href="http://bluemaxholidays.com/people-and-life-style.html">People & Life Style</a></li>
                       	</ul>
 
                     </div>
@@ -361,7 +366,7 @@ drawMenus();
 
       <!--FOOTER AREA START-->
       <div id="Footer_area">
-                  <div id="Leftfooter">Copyright @ 2016 www.bluemaxholidays.com. All Rights Reserved </div>
+                  <div id="Leftfooter">Copyright @ 2015 www.bluemaxholidays.com. All Rights Reserved </div>
                   <div id="Rightfooter">Design & Developed by <a href="http://www.oxfotech.com/" target="_blank">www.oxfotech.com</a></div>
                 </div>
 
